--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="card" style="width: 18rem;">
-                        <img src="./Image/1473165427_stickers.png" class="card-img-top" alt="..." style="height: 13rem;" class="hover">
+                        <img src="./Image/1473167305_trifold-brochure-printing.png" class="card-img-top" alt="..." style="height: 13rem;" class="hover">
                         <div class="card-body">
                           <h5 class="card-title">Trifold Brochures</h5>
                           <span>STARTING AT</span>
@@ -249,7 +249,7 @@
                 </div>
                 <div class="mt-5 mb-5">
                     <h3 style="color: #384a62 !important; font-weight: bold; font-family: serif;" id="h3">Nigeria’s No. 1 online print shop 👑</h3>
-                    <p style="color: #506683; font-size: large; font-weight: 500; width: 550px;" >Our print services and solutions are trusted by these brands and over 15,000 other businesses in Nigeria.</p>
+                    <p style="color: #506683; font-size: large; font-weight: 500; width: 550px;" id="p">Our print services and solutions are trusted by these brands and over 15,000 other businesses in Nigeria.</p>
                     <img src="./Image/Group_61_h8vxko.png" alt="" id="logos">
                 </div>
     </section>
